[package]
name = "poloniex_api"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
simple_logger = "5.0.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
